Refactor stone abilities around energy resources and clean up mod structure
- Replace per-ability cooldowns with configurable stone energy pools, regen, instant costs, and channel drain rates
- Add shared gauntlet energy, holder energy, and raw stone energy handling
- Add configurable ability cost metadata and helpers for charged/channel abilities
- Add stone energy HUD overlay with fallback rendering and optional texture paths
- Remove obsolete cooldown logic and related commands
- Improve client/common separation, packet/menu validation, and Forge 1.20.1 compatibility
- Clean up Gradle/resource metadata, generated files, and project hygiene
- Fix runClient asset warnings including loot table typo and model parent issues
- Fix 3D stone item models by removing invalid item parent inheritance